2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/devel/packaging.html: Indent region.  Update.  Fix Debian
	and Fedora (previously: Red Hat) build instructions.

	* site/about/thanks.html (href): 
	* site/about/screenshots.html (href): 
	* site/about/faq.html (Han-Wen): Update documentation links to v2.4.

	* site/devel/index.html: Indent region.  Add CVS information.  Do
	not use "here" for link names.

2005-03-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/devel/index.html: update INSTALL links.

2005-03-23  Graham Percival  <gperlist@shaw.ca>

	* site/switch/tour.html: removed link to Erich
	Rickheit's page.

2005-03-23  Matthias Kilian  <kili@outback.escape.de>

	* site/about/automated-engraving/benchmarking.html,
	* site/about/automated-engraving/engraving.html,
	* site/about/automated-engraving/formatting-architecture.html,
	* site/about/automated-engraving/implementing-notation.html,
	* site/about/automated-engraving/implementing-typography.html,
	* site/about/automated-engraving/software.html: minor editing.

2005-03-15  Pedro Kroger  <kroeger@pedrokroeger.net>

	* site/download/index.html: Add OpenBSD.

2005-02-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* newweb.css (a): increase border-spacing.

2005-02-26  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/images/ubuntu.png: Add.

	* site/download/index.html: Add ubuntu.

2005-02-26  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml: add LSR

2005-02-24  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scripts/check-translation.py (CVS_DIFF): Omit keyword expansion.

	* site/index.html: HTML fixes, run indent-region.

	* GNUmakefile (check-translation): New target.

	* scripts/check-translation.py: New file.

	* site/devel/participating/menu-entries.py: Add
	documentation-adding.

2005-02-23  Graham Percival  <gperlist@shaw.ca>

	* site/devel/participating/documentation-adding.html: new page,

	* site/devel/participating/index.html: removed info about adding