@@ -1,3 +1,7 @@
+2005-03-29  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* scripts/check-translation.py: Actually add.
+
 2005-03-28  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/devel/packaging.html: Indent region.  Update.  Fix Debian
